# clean_prog

./: .gitignore  README.md  request.txt  tags
.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins.json  workspace
.trash/c#_syntax/: c#_syntax.csproj
C/exam/: Makefile
C/first_ai/: 1. first_ai.c.md  Makefile
C/inter/: 2. inter.c.md  Makefile
C/io/: 3. io.c.md  Makefile
C/libalgo/: 4. ft_selectionsort.c.md  Makefile
C/libft/: 5. ft_itoa.c.md  6. ft_printf.c.md  7. ft_strlen.c.md  8. list_sort_bubble.c.md  Makefile  test.check  unit_libft
C/test/: Makefile
C/test_check/: Makefile  test.check  unit_test_check
CPP/Learn/: CMakeCache.txt  CMakeLists.txt  Makefile  main.cpp  unittest.cpp
CPP/SchoolConverter/: CMakeLists.txt  Dockerfile  SchoolConverter  SchoolConverter.cpp  SchoolConverter.h
CPP/cmake/: CMAKE  CMakeCache.txt  (+4 more)
CPP/gcdandlcd/: CMakeCache.txt  CMakeLists.txt  Makefile
CPP/gcdandlcd/src/: gcd.cpp  lcd.cpp  main.cpp  main.h
CPP/opencv_proj/: CMakeCache.txt  CMakeLists.txt  Makefile  main.cpp
CPP/opencv_proj/src/: funcs.h
CleanProgDescription/: C.md
MVVM/: MVVM.sln
beginend/: Makefile
c/: class.cpp  try  try.c
csh/: MineGame.sln  main.cs
first_ai/: Dockerfile  Makefile
gma/: Dockerfile  text.txt
py/: .env  gcd.py  getslackmess.py  hhapi.py  jobs.py  livecomm.py  popular_skills.txt  s&p.py  skill.txt  slackfiller.py  struct.txt  table.py  testOOP.py  youtubeapi.py
sh/: Makefile  configure.sh  create_proj_struct.sh  event.txt  mkcstrct.sh  sync.sh  terminal_autoconf.sh  timer.sh
stdc/: Dockerfile
(+197 files in other folders)
