project(gcd)
set(SOURCE_DIR ./src)
set(SOURCE_LIB  src/gcd.cpp)
set(SOURCE_LIB2  src/lcd.cpp)
set(SOURCE_EXE src/main.cpp)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -Wextra")
add_library(lcd STATIC ${SOURCE_LIB2})
add_library(gcd STATIC ${SOURCE_LIB})
add_executable(gcd.out ${SOURCE_EXE})
target_link_libraries(gcd.out gcd lcd)